<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_normal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.goplay.gamesdk.widgets.ScoinTextView
                android:id="@+id/tv_quick_login_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="15dp"
                android:text="@string/warn_update_quick_login_acc"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <com.goplay.gamesdk.widgets.ScoinEditText
                android:id="@+id/edt_username"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/scoin_edit_text"
                android:drawableLeft="@drawable/scoin_user_drawable_left"
                android:drawablePadding="5dp"
                android:hint="@string/username_hint"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:singleLine="true"
                cfont:typeface="roboto_light" />

            <com.goplay.gamesdk.widgets.ScoinEditText
                android:id="@+id/edt_password"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/scoin_edit_text"
                android:drawableLeft="@drawable/scoin_pw_drawable_left"
                android:drawablePadding="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:singleLine="true"
                cfont:typeface="roboto_light" />

            <com.goplay.gamesdk.widgets.ScoinButton
                android:id="@+id/btn_update"
                style="@style/ScoinAllCapButton"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/scoin_btn_blue_click"
                android:text="@string/update"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>